--- a/vignettes/configure-cloudos.Rmd
+++ b/vignettes/configure-cloudos.Rmd
@@ -21,8 +21,9 @@ The cloudos functions will be need set of cloudos configurations for able to con
 
 First thing this R-package will look for environment variables - `CLOUDOS_BASEURL`, `CLOUDOS_TOKEN`, `CLOUDOS_TEAMID` and if not found it will try to read from `~/.cloudos/config`.
 
-Two ways to set cloudos environment variables
+Three ways to set cloudos environment variables
 
 1. Add them to `~/.Renviron`, which will load the environment variables on beginning of the R-session
+2. Add them using `Sys.setenv(ENV_VAR = "env_var_value")`
 2. Use the function `cloudos_configure()`, which will create a `~/.cloudos/config` (Recommended way if you using multiple cloudos clients)
 
